# Hive_online

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.e4acb90  Joueur.cpp  Joueur.h  Partie.cpp  Partie.hpp  Pieces.cpp  Pieces.h  README.md  cases.cpp  cases.h  clickablepieceitem.cpp  clickablepieceitem.h  coords.cpp  coords.h  gamemanager.cpp  gamemanager.h  interactivecaseitem.cpp  interactivecaseitem.h  joueur.cpp  joueur.h  legalmoves.cpp  legalmoves.h  main.cpp  mainwindow.cpp  mainwindow.h  partie.cpp  partie.h  partie.hpp  pieces.cpp  pieces.h  plateau.cpp  plateau.h
Ex30/Ex30.xcodeproj/: project.pbxproj
Ex30/Ex30.xcodeproj/project.xcworkspace/xcuserdata/juliette.xcuserdatad/: UserInterfaceState.xcuserstate
lo21xcode/lo21xcode/: main.cpp
lo21xcode/lo21xcode.xcodeproj/: project.pbxproj
lo21xcode/lo21xcode.xcodeproj/project.xcworkspace/xcuserdata/juliette.xcuserdatad/: UserInterfaceState.xcuserstate
lo21xcode/lo21xcode.xcodeproj/xcuserdata/juliette.xcuserdatad/xcschemes/: xcschememanagement.plist
